k8s/API/app-tech-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-tech
  labels:
    app: app-tech
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-tech
  template:
    metadata:
      labels:
        app: app-tech
    spec:
      containers:
        - name: app-tech
          image: wolwer/app-tech
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 30
