k8s/API/app-tech-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-tech-service
spec:
  type: NodePort
  selector:
    app: app-tech
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
