k8s/API/app-tech-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-tech-ingress
  labels:
    app: app-tech
spec:
  rules:
    - host: alb-tech-223571255.us-east-1.elb.amazonaws.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-tech-service
                port:
                  number: 8080
